# memory-allocator

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: allocConfig.cmake.in
include/: allocator.h  block.h  freelist.h  internal.h
src/: allocator.c  block.c  freelist.c
tests/: framework.h  test_basic.c  test_coalesce.c  test_fragmentation.c  test_stress.c
